# bcfg

./: .gitignore  LICENSE.md  README.md  TODO.md  bcfg.opam  bcfgt.opam  dune-project
.github/workflows/: test.yml
fuzz/: dune  fuzz.ml
lib/: bcfg.ml  bcfg.mld  bcfg.mli  bcfg_json.ml  bcfg_json.mli  bcfg_lexer.mll  bcfg_out.ml  bcfg_out.mli  bcfg_parser.mly  bcfg_query.ml  bcfg_query_lexer.mll  bcfg_query_parser.mly  bcfg_stream.ml  bcfg_stream.mli  bcfg_txtloc.ml  bcfg_type.ml  bcfgq.ml  bcfgt.ml  bcfgt.mli  dune
packaging/debian/: changelog  control  copyright  create_package.sh
test/: dune  invalid.t  iso.t  lint.t  query.t  readme.t  test.ml  test_bcfgt.ml  test_json.ml  test_lexer.ml  test_parser.ml  test_query.ml  test_stream.ml  validate.t
test/materials/: README.md
test/materials/expected/: atom_escaped_chars.scfg  blocks_nested.scfg  comment_preceding_ws.scfg  comment_preceding_ws2.scfg  curly_brace_names2.scfg  curly_brace_names3.scfg  curly_brace_names4.scfg  dq_escape.scfg  dq_with_sq.scfg  empty_block3.scfg  empty_param.scfg  empty_param2.scfg  escape_seq.scfg  escape_ws_at_eol.scfg  example.scfg  example2.scfg  hash_as_param.scfg  param_spaces.scfg  quoted_name_and_params.scfg  same_name.scfg  sq_backslash.scfg  sq_backslash2.scfg  unicode_name.scfg  unicode_params.scfg  whitespace_after_brace.scfg
test/materials/invalid/: block_not_closed.scfg  block_not_closed_nested.scfg  block_without_directive_name.scfg  block_without_newline.scfg  block_without_newline2.scfg  comment_after_brace.scfg  dq_end_of_word.scfg  dq_not_closed.scfg  escape_end_of_word.scfg  escape_within_sq.scfg  sq_end_of_word.scfg  sq_escape.scfg  sq_not_closed.scfg
test/materials/valid/: atom_escaped_chars.scfg  blocks_nested.scfg  comment_preceding_ws.scfg  comment_preceding_ws2.scfg  curly_brace_names.scfg  curly_brace_names2.scfg  curly_brace_names3.scfg  curly_brace_names4.scfg  dq_escape.scfg  dq_with_sq.scfg  empty_block.scfg  empty_block2.scfg  empty_block3.scfg  empty_param.scfg  empty_param2.scfg  escape_seq.scfg  escape_ws_at_eol.scfg  example.scfg  example2.scfg  hash_as_param.scfg  param_spaces.scfg  param_spaces2.scfg  quoted_name_and_params.scfg  same_name.scfg  sq_backslash.scfg  sq_backslash2.scfg  unicode_name.scfg  unicode_params.scfg  whitespace_after_brace.scfg
