opam-version: "2.0"
name:         "bcfg"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/robur-coop/bcfg"
bug-reports:  "https://github.com/robur-coop/bcfg/issues"
dev-repo:     "git+https://github.com/robur-coop/bcfg.git"
doc:          "https://robur-coop.github.io/bcfg/"
license:      "MIT"
synopsis:     "A boring configuration format"
build:        [ "ocaml" "pkg/pkg.ml" "buid" "--dev-pkg" "%{dev}%" ]
depends: [
  "ocaml"       {>= "4.08.0"}
  "dune"
  "fmt"
  "logs"
  "cmdliner"
  "menhir"
  "uutf" {with-test}
  "crowbar" {with-test}
  "hxd" {with-test}
]
