opam-version: "2.0"
name:         "bcfg"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/robur-coop/bcfg"
bug-reports:  "https://github.com/robur-coop/bcfg/issues"
dev-repo:     "git+https://github.com/robur-coop/bcfg.git"
doc:          "https://robur-coop.github.io/bcfg/"
license:      "MIT"
synopsis:     "A boring configuration format"
build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ]
  [ "sh" "-ex" "packaging/debian/create-package.sh" ] {os-family = "debian" | os-family = "ubuntu" }
]
depends: [
  "ocaml"       {>= "4.08.0"}
  "dune"
  "fmt"
  "logs"
  "cmdliner"
  "menhir"
  "uutf" {with-test}
  "crowbar" {with-test}
  "hxd" {with-test}
]
x-maintenance-intent: [ "(latest)" ]
