opam-version: "2.0"
name:         "bcfgt"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/robur-coop/bcfg"
bug-reports:  "https://github.com/robur-coop/bcfg/issues"
dev-repo:     "git+https://github.com/robur-coop/bcfg.git"
doc:          "https://robur-coop.github.io/bcfg/"
license:      "MIT"
synopsis:     "A boring way to get OCaml values from configuration files"
build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
]
